Avoid re-render glitches
When changing between languages, the transition between pages can
cause UI glitches, where text could change font for a brief second.

The fix makes the main content invisible by default, and applies the
'invisible' class just before switching languages. After the main
content has rendered, the 'invisible' class is removed. These changes
effectively remove the UI glitches that were present when switching
languages.

--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -86,3 +86,7 @@ body .root .content.ar {
     font-size: xx-large;
   }
 }
+
+.invisible {
+  display: none !important;
+}
